public interface Statsable {
    int getTotalTasks();
    double getAveragePriority();
}