package com.example;

public class InvalidPriorityException extends RuntimeException
{
    public InvalidPriorityException(String message) {
        super(message);
    }
}
